# rismidi

./: .pre-commit-config.yaml  Cargo.toml  README.md  bundler.toml
.github/: dependabot.yaml
.github/workflows/: build.yaml  check.yaml  test.yaml
plugins/nogui/: Cargo.toml
plugins/nogui/src/: lib.rs
plugins/ris_channel_filter/: Cargo.toml  README.md
plugins/ris_channel_filter/src/: lib.rs
plugins/ris_channelize/: Cargo.toml  README.md
plugins/ris_channelize/src/: channel_tracker.rs  lib.rs
plugins/ris_delay/: Cargo.toml  README.md
plugins/ris_delay/src/: lib.rs
rismidi/: Cargo.toml  README.md
rismidi/src/: error.rs  has_channel.rs  lib.rs  time.rs
rismidi/src/midi/: constants.rs  midi_channel.rs
rismidi/src/param/: mod.rs  optional_midi_channel.rs
rismidi/src/params/: mod.rs  optional_int.rs  optional_midi_channel.rs  percentage.rs  simple_time.rs
src/: error.rs  lib.rs  switch_channel.rs
src/midi/: constants.rs  mod.rs
src/param/: midi_channel.rs  mod.rs  optional_midi_channel.rs
validate_vst3/: Cargo.toml  build.rs
validate_vst3/sdk_wrapper/: CMakeLists.txt
validate_vst3/src/: lib.rs
xtask/: Cargo.toml
