[package]
name = "rismidi"
description = "Helpers for creating MIDI plugins"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lazy_static.workspace = true
nih_plug.workspace = true
thiserror.workspace = true

[workspace]
members = [
    "plugins/ris_channelize",
    "plugins/ris_channel_filter",
    "plugins/nogui",

    "xtask",
]
exclude = ["validate_vst3"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Simon Leiner <simon@leiner.me>"]
license = "GPL-3.0"
repository = "https://github.com/rismidi/rismidi"

[workspace.dependencies]
lazy_static = "1.4.0"
rismidi = { path = "." }
thiserror = "1.0.37"

[workspace.dependencies.nih_plug]
git = "https://github.com/robbert-vdh/nih-plug.git"
rev = "3ba62c4aabf8c9db6736f837320af0174e10e02a"
features = ["assert_process_allocs"]

[workspace.dependencies.nih_plug_xtask]
git = "https://github.com/robbert-vdh/nih-plug.git"
rev = "3ba62c4aabf8c9db6736f837320af0174e10e02a"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "s"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
