[workspace]
members = [
    "rismidi",

    "plugins/ris_channelize",
    "plugins/ris_channel_filter",
    "plugins/nogui",

    "xtask",
]
exclude = ["validate_vst3"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Simon Leiner <simon@leiner.me>"]
license = "GPL-3.0"
repository = "https://github.com/rismidi/rismidi"

[workspace.dependencies]
lazy_static = "1.4.0"
rismidi = { path = "./rismidi" }
thiserror = "1.0.37"

[workspace.dependencies.nih_plug]
git = "https://github.com/robbert-vdh/nih-plug.git"
rev = "34cc1ba30b65d7a2d649c56b5a043c5c2d117878"
features = ["assert_process_allocs"]

[workspace.dependencies.nih_plug_xtask]
git = "https://github.com/robbert-vdh/nih-plug.git"
rev = "34cc1ba30b65d7a2d649c56b5a043c5c2d117878"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "s"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
