[package]
name = "rismidi"
description = "Helpers for creating MIDI plugins"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lazy_static.workspace = true
nih_plug.workspace = true
thiserror.workspace = true
