[package]
name = "ris_channel_filter"
description = "Only MIDI data on the selected channel are allowed to pass through"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug.workspace = true
rismidi.workspace = true
