[package]
name = "ris_delay"
description = "Delays MIDI notes or control changes, including feedback"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug.workspace = true
rismidi.workspace = true
